penambahan logika untuk email

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -12,5 +12,5 @@
       android:id="@+id/add_story"
       android:icon="@drawable/baseline_add_to_photos_24"
       android:title="@string/add_story"
-      app:showAsAction="collapseActionView|ifRoom" />
+      app:showAsAction="collapseActionView|always" />
 </menu>
