--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -46,24 +46,22 @@
       android:inputType="textPersonName"
       android:padding="15dp"
       android:minHeight="40dp"
-      android:text="@string/nama"
       android:paddingHorizontal="5dp"
       app:layout_constraintEnd_toEndOf="@+id/tv_register"
       app:layout_constraintStart_toStartOf="@+id/tv_register"
       app:layout_constraintTop_toBottomOf="@+id/textView"
       android:importantForAutofill="no"
       tools:ignore="VisualLintTextFieldSize" />
-   <com.dicoding.tugasstoryapp.view.customview.custom
+   <EditText
       android:id="@+id/Edt_register_email"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="16dp"
       android:background="@drawable/coustom"
       android:ems="10"
-      android:hint="@string/masukan_nama_yang_benar"
+      android:hint="@string/masukan_email_yang_benar"
       android:inputType="textEmailAddress"
       android:padding="15dp"
-      android:text="@string/email"
       android:paddingHorizontal="5dp"
       app:layout_constraintEnd_toEndOf="@+id/Edt_register_name"
       app:layout_constraintStart_toStartOf="@+id/Edt_register_name"
@@ -76,10 +74,10 @@
       android:layout_marginTop="16dp"
       android:background="@drawable/coustom"
       android:ems="10"
-      android:hint="@string/masukan_nama_yang_benar"
+      android:hint="@string/masukan_password_yang_benar"
       android:inputType="textPassword"
       android:padding="15dp"
-      android:text="@string/password"
+
       android:paddingHorizontal="5dp"
       app:layout_constraintEnd_toEndOf="@+id/Edt_register_email"
       app:layout_constraintStart_toStartOf="@+id/Edt_register_email"
