--- a/app/src/main/res/layout/story_item.xml
+++ b/app/src/main/res/layout/story_item.xml
@@ -48,7 +48,7 @@
          android:layout_marginTop="8dp"
          android:maxLines="2"
          android:ellipsize="end"
-         tools:text="testing guys"
+         tools:text="testing guys \n dan coba test"
          android:textSize="14sp" />
 
 
